--- a/src/output.css
+++ b/src/output.css
@@ -129,7 +129,7 @@ button {
 
 
 .staff-selected {
-    fill: rgba(255, 255, 0, 0.3) !important;
+    fill: rgb(8, 0, 255) !important;
 }
 .note-duration-display {
     position: fixed;
